Changed some wording in about-me

--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
               really got me excited, so I leaped into the Front End Developer course with Skillcrush.
               I love challenges and problem-solving, so coding feels like a perfect fit.</p>
             <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
-              crowd, or even want to build a new site from scratch, then I’d love to hear from you! Let’s
-              chat and see how I can help you.
+              crowd, or even want to build a new site from scratch, then I’d love to hear from you and see how I can help! Now, I'll just put the kettle on, and ...
             </p>
           </div>
         </div>
@@ -224,7 +223,7 @@
   <footer class="footer" id="contact">
     <div class="content-wrapper">
       <!-- <div class="footer-content"> -->
-      <h3>Let's Talk!</h3>
+      <h3>... Let's Talk!</h3>
       <div class="contact-wrapper">
         <div class="contact-info">
           <h4 class="contact-title">Hire me</h4>
