Changed contact-title in html, and reduced font-weight and size in css.

--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
       <h3>... Let's Talk!</h3>
       <div class="contact-wrapper">
         <div class="contact-info">
-          <h4 class="contact-title">Hire me</h4>
+          <h4 class="contact-title">Interested in working together? Send me an email with some info about your project, and I'll get back to you as soon as I can (normally within 24 hours).</h4>
           <address>
             <a href="mailto:nik@nikpayton.com">nik [@] nikpayton.com</a>
           </address>
         </div>
 
         <div class="contact-info social">
-          <h4 class="contact-title">Follow me</h4>
+          <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and Twitter and tell me what you're up to.</h4>
           <div class="follow-section">
             <ul class="social-icons">
               <li>
