Changed email address

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="contact-info">
           <h4 class="contact-title">Interested in working together? Send me an email with some info about your project, and I'll get back to you as soon as I can (normally within 24 hours).</h4>
           <address>
-            <a href="mailto:nik@nikpayton.com">nik [@] nikpayton.com</a>
+            <a href="mailto:nik@nikpayton.tech">nik [@] nikpayton.tech</a>
           </address>
         </div>
 
