Changed 'learning' to 'studying' in about-me

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
               Music Business.</p>
             <p class="about-text">The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
-              and started learning a range of new marketable skills, including basic web development. That last one that
+              and started studying a range of new marketable skills, including basic web development. That last one that
               really got me excited, so I leaped into the Front End Developer course with Skillcrush.
               I love challenges and problem-solving, so coding feels like a perfect fit.</p>
             <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
