Added new profile pic

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="content-wrapper">
           <h2>About Me</h2>
           <div class="about-photo">
-            <img src="img/photo-pubshot.jpg" alt="Black and white photo of Nik Payton playing sax on a show" />
+            <img src="img/new-pub-photo.jpg" alt="Photo of Nik Payton" />
           </div>
           <div class="about-info">
             <p class="about-intro">Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
