Removed mention of Twitter in contact text

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
 
         <div class="contact-info social">
-          <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and Twitter and tell me what you're up to.</h4>
+          <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and tell me what you're up to.</h4>
           <div class="follow-section">
             <ul class="social-icons">
               <li>
