Added the Stranger Things word game to the Projects section, and a screenshot for the placeholder image

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
+                <img src="img/stranger-word-game.png" alt="Stranger Things word game" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Guess the Word</h3>
+                <p class="project-description">An updated version of a Skillcrush project. Enter the Upside Down, and test your knowledge of the Stranger Things world. This game includes floating dust particles and quotes from all four seasons.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  Javascript, JSX, Git, GitHub, HTML, CSS </p>
+                <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
+            <article class="portfolio-piece">
+              <div class="project-image">
                 <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
               </div>
               <div class="project-info">
