Changed Rogue Pickings decsription to include 'landing page'.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Rogue Pickings</h3>
-                <p class="project-description">A simple one-page site that would be great for a local café or a food
+                <p class="project-description">A simple landing page that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
                   HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
