Added a services page, copied over the initial html file and need to change css, javascript links etc. Also created a scss file for future use

--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nik Payton</title>
+  <title>Nik Payton - Services</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,8 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/main.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
@@ -42,7 +42,6 @@
           <li><a href="#about">about</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="/services/index.html">services</a></li>
-
         </ul>
       </nav>
     </div>
