Removed hero-area and portfolio-area on services page, added a services class in css

--- a/services/index.html
+++ b/services/index.html
@@ -50,103 +50,16 @@
   <main>
     <div class="content">
 
-      <section class="hero-area">
+      <!-- <section class="hero-area">
         <div class="contact-wrapper">
-          <h1>What can I <span>code</span> for you today?</h1>
+          <h1><span>services</span></h1>
         </div>
-      </section>
+      </section> -->
 
-      <section class="portfolio" id="projects">
+      <section class="services">
         <div class="content-wrapper">
-          <h2>Projects</h2>
+          <h1><span>Services</span></h1>
           <div class="portfolio-wrapper">
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Super Sticky Notes</h3>
-                <p class="project-description">A Greenfield project using multiple components to create a classic sticky
-                  note UI. You can easily add, delete, edit and search notes.
-                </p>
-                <p class="project-skills"><span>Skills: </span> React, JSX, Stateful Components, CodeSandbox, React Dev Tools
-                </p>
-                <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
-              </div>
-            </article>
-
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/stranger-word-game.png" alt="Stranger Things word game" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Guess the Word</h3>
-                <p class="project-description">An updated version of a Skillcrush project. Enter the Upside Down, and test your knowledge of the Stranger Things world. This game includes floating dust particles and quotes from all four seasons.</p>
-                <p class="project-skills"><span>Skills: </span>
-                  Javascript, JSX, Git, GitHub, HTML, CSS </p>
-                <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
-              </div>
-            </article>
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Hotel Booking UI</h3>
-                <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
-                  available by different criteria, including amenities and offers.</p>
-                <p class="project-skills"><span>Skills: </span>
-                  React, JSX, Stateful Components, CodeSandbox, React Dev Tools</p>
-                <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
-              </div>
-            </article>
-
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Github Repo Gallery</h3>
-                <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
-                  for a specific repo, or click on one for more details and a link to the repository.</p>
-                <p class="project-skills"><span>Skills: </span>
-                  JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
-                <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
-                  Page</a>
-              </div>
-            </article>
-
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Unplugged</h3>
-                <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
-                  desktop screens. A versatile design that can be repurposed for various scenarios.</p>
-                <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
-                <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
-                  Page</a>
-              </div>
-            </article>
-
-            <article class="portfolio-piece">
-              <div class="project-image">
-                <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
-              </div>
-              <div class="project-info">
-                <h3 class="project-title">Rogue Pickings</h3>
-                <p class="project-description">A simple landing page that would be great for a local café or a food
-                  stand. Converted from a static website into a responsive design using Flexbox.</p>
-                <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
-                <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
-              </div>
-            </article>
-          </div>
-        </div>
-      </section>
 
       <!-- <hr class="header-divider"> -->
 
@@ -266,9 +179,9 @@
     <!-- </div> -->
   </footer>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
