Removed skills and about areas.

--- a/services/index.html
+++ b/services/index.html
@@ -37,9 +37,9 @@
       <div class="header-divider"></div>
       <nav id="navbar">
         <ul class="navigation">
-          <li><a href="#projects">projects</a></li>
-          <li><a href="#skills">skills</a></li>
-          <li><a href="#about">about</a></li>
+          <li><a href="../index.html#projects">projects</a></li>
+          <li><a href="../index.html#skills">skills</a></li>
+          <li><a href="../index.html#about">about</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="/services/index.html">services</a></li>
         </ul>
@@ -60,19 +60,20 @@
         <div class="content-wrapper">
           <h1><span>Services</span></h1>
           <div class="portfolio-wrapper">
+            </div>
 
       <!-- <hr class="header-divider"> -->
 
-      <section class="skills" id="skills">
+      <!-- <section class="skills" id="skills">
         <div class="content-wrapper">
           <h2>Skills</h2>
           <!-- <h4>Developer Skills</h4> -->
-          <ul class="skill-list">
+          <!-- <ul class="skill-list">
             <li class="skill-item">
               <i class="fab fa-html5"></i>
               <p class="skill-item-name">Html</p>
-            </li>
-            <li class="skill-item">
+            </li> -->
+            <!-- <li class="skill-item">
               <i class="fab fa-css3"></i>
               <p class="skill-item-name">Css</p>
             </li>
@@ -87,8 +88,8 @@
             <li class="skill-item">
               <i class="design-icon"></i>
               <p class="skill-item-name">Responsive Design</p>
-            </li>
-            <li class="skill-item">
+            </li> -->
+            <!-- <li class="skill-item">
               <i class="fab fa-git-alt"></i>
               <p class="skill-item-name">Git</p>
             </li>
@@ -103,8 +104,8 @@
             <li class="skill-item">
               <i class="ai-icon"></i>
               <p class="skill-item-name">Illustrator</p>
-            </li>
-            <li class="skill-item">
+            </li> -->
+            <!-- <li class="skill-item">
               <i class="ps-icon"></i>
               <p class="skill-item-name">Photoshop</p>
             </li>
@@ -118,11 +119,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> --> 
 
       <section class="about-area" id="about">
         <div class="content-wrapper">
-          <h2>About Me</h2>
+          <!-- <h2>About Me</h2>
           <div class="about-photo">
             <img src="img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
           </div>
@@ -140,7 +141,7 @@
             <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
               crowd, or even want to build a new site from scratch, then I’d love to hear from you and see how I can help! Now, I'll just put the kettle on, and ...
             </p>
-          </div>
+          </div> -->
         </div>
       </section>
     </div>
