--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nik Payton - Services</title>
+  <title>Nik Payton</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,8 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
@@ -37,11 +37,11 @@
       <div class="header-divider"></div>
       <nav id="navbar">
         <ul class="navigation">
-          <li><a href="../index.html#projects">projects</a></li>
-          <li><a href="../index.html#skills">skills</a></li>
-          <li><a href="../index.html#about">about</a></li>
-          <li><a href="#contact">contact</a></li>
-          <li><a href="/services/index.html">services</a></li>
+          <li><a href="#projects">projetos</a></li>
+          <li><a href="#skills">skills</a></li>
+          <li><a href="#about">sobre</a></li>
+          <li><a href="#contact">contato</a></li>
+          <li><a href="/services/index.html">serviços</a></li>
         </ul>
       </nav>
     </div>
@@ -50,30 +50,116 @@
   <main>
     <div class="content">
 
-      <!-- <section class="hero-area">
+      <section class="hero-area">
         <div class="contact-wrapper">
-          <h1><span>services</span></h1>
+          <h1>What can I <span>code</span> for you today?</h1>
         </div>
-      </section> -->
+      </section>
 
-      <section class="services">
+      <section class="portfolio" id="projects">
         <div class="content-wrapper">
-          <h1><span>Services</span></h1>
+          <h2>Projects</h2>
           <div class="portfolio-wrapper">
-            </div>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Super Sticky Notes</h3>
+                <p class="project-description">A Greenfield project using multiple components to create a classic sticky
+                  note UI. You can easily add, delete, edit and search notes.
+                </p>
+                <p class="project-skills"><span>Skills: </span> React, JSX, Stateful Components, CodeSandbox, React Dev Tools
+                </p>
+                <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
+
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/stranger-word-game.png" alt="Stranger Things word game" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Guess the Word</h3>
+                <p class="project-description">An updated version of a Skillcrush project. Enter the Upside Down, and test your knowledge of the Stranger Things world. This game includes floating dust particles and quotes from all four seasons.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  Javascript, JSX, Git, GitHub, HTML, CSS </p>
+                <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Hotel Booking UI</h3>
+                <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
+                  available by different criteria, including amenities and offers.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  React, JSX, Stateful Components, CodeSandbox, React Dev Tools</p>
+                <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
+
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Github Repo Gallery</h3>
+                <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
+                  for a specific repo, or click on one for more details and a link to the repository.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
+                <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
+                  Page</a>
+              </div>
+            </article>
+
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Unplugged</h3>
+                <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
+                  desktop screens. A versatile design that can be repurposed for various scenarios.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
+                <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
+                  Page</a>
+              </div>
+            </article>
+
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">Rogue Pickings</h3>
+                <p class="project-description">A simple landing page that would be great for a local café or a food
+                  stand. Converted from a static website into a responsive design using Flexbox.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
+                <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
 
       <!-- <hr class="header-divider"> -->
 
-      <!-- <section class="skills" id="skills">
+      <section class="skills" id="skills">
         <div class="content-wrapper">
           <h2>Skills</h2>
           <!-- <h4>Developer Skills</h4> -->
-          <!-- <ul class="skill-list">
+          <ul class="skill-list">
             <li class="skill-item">
               <i class="fab fa-html5"></i>
               <p class="skill-item-name">Html</p>
-            </li> -->
-            <!-- <li class="skill-item">
+            </li>
+            <li class="skill-item">
               <i class="fab fa-css3"></i>
               <p class="skill-item-name">Css</p>
             </li>
@@ -88,8 +174,8 @@
             <li class="skill-item">
               <i class="design-icon"></i>
               <p class="skill-item-name">Responsive Design</p>
-            </li> -->
-            <!-- <li class="skill-item">
+            </li>
+            <li class="skill-item">
               <i class="fab fa-git-alt"></i>
               <p class="skill-item-name">Git</p>
             </li>
@@ -104,8 +190,8 @@
             <li class="skill-item">
               <i class="ai-icon"></i>
               <p class="skill-item-name">Illustrator</p>
-            </li> -->
-            <!-- <li class="skill-item">
+            </li>
+            <li class="skill-item">
               <i class="ps-icon"></i>
               <p class="skill-item-name">Photoshop</p>
             </li>
@@ -119,18 +205,29 @@
             </li>
           </ul>
         </div>
-      </section> --> 
+      </section>
 
-      <section class="services-info">
+      <section class="about-area" id="about">
         <div class="content-wrapper">
-          <p>Code a pixel-perfect website from an existing design, including interactivity</p>
-          <p>Convert existing website into a fully responsive, mobile-friendly site.</p>
-          <p>Add interactivity to a site.</p>
-          <p>Personalize a WordPress theme.</p>
-          <p>WordPress maintenance – backups, updates, tweaks etc.</p>
-          <h4>Musicians, artists and small businesses</h4>
-          <p>Online business/presence analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
-          <p>Website optimisation - attract more fans/clients</p>
+          <h2>About Me</h2>
+          <div class="about-photo">
+            <img src="img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
+          </div>
+          <div class="about-info">
+            <p class="about-intro">Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
+              Brazil.</p>
+            <p class="about-text">My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
+              spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
+              Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
+              Music Business.</p>
+            <p class="about-text">The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
+              and started studying a range of new marketable skills, including basic web development. That last one that
+              really got me excited, so I leaped into the Front End Developer course with Skillcrush.
+              I love challenges and problem-solving, so coding feels like a perfect fit.</p>
+            <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
+              crowd, or even want to build a new site from scratch, then I’d love to hear from you and see how I can help! Now, I'll just put the kettle on, and ...
+            </p>
+          </div>
         </div>
       </section>
     </div>
@@ -169,9 +266,9 @@
     <!-- </div> -->
   </footer>
 
-  <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="/js/plugins.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
