--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -20,8 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
@@ -62,7 +62,7 @@
           <div class="portfolio-wrapper">
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
+                <img src="../img/sticky-note.png" alt="Sticky Note App screen shot" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Super Sticky Notes</h3>
@@ -77,7 +77,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/stranger-word-game.png" alt="Stranger Things word game" />
+                <img src="../img/stranger-word-game.png" alt="Stranger Things word game" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Guess the Word</h3>
@@ -89,7 +89,7 @@
             </article>
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
+                <img src="../img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Hotel Booking UI</h3>
@@ -103,7 +103,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
+                <img src="../img/github-repo.png" alt="Github Repo Page screen shot" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Github Repo Gallery</h3>
@@ -118,7 +118,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
+                <img src="../img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Unplugged</h3>
@@ -133,7 +133,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
+                <img src="../img/rogue.png" alt="Rogue Picking Page screen shot" />
               </div>
               <div class="project-info">
                 <h3 class="project-title">Rogue Pickings</h3>
@@ -211,7 +211,7 @@
         <div class="content-wrapper">
           <h2>About Me</h2>
           <div class="about-photo">
-            <img src="img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
+            <img src="../img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
           </div>
           <div class="about-info">
             <p class="about-intro">Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
@@ -266,9 +266,9 @@
     <!-- </div> -->
   </footer>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
