--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -66,8 +66,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Super Sticky Notes</h3>
-                <p class="project-description">A Greenfield project using multiple components to create a classic sticky
-                  note UI. You can easily add, delete, edit and search notes.
+                <p class="project-description">Um projeto criado do zero, usando vários componentes para criar uma IU de notas adesivas clássica. Você pode facilmente adicionar, excluir, editar e pesquisar notas.
                 </p>
                 <p class="project-skills"><span>Skills: </span> React, JSX, Stateful Components, CodeSandbox, React Dev Tools
                 </p>
@@ -81,7 +80,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Guess the Word</h3>
-                <p class="project-description">An updated version of a Skillcrush project. Enter the Upside Down, and test your knowledge of the Stranger Things world. This game includes floating dust particles and quotes from all four seasons.</p>
+                <p class="project-description">Uma versão atualizada de um projeto Skillcrush. Entre no Mundo Invertido e teste seus conhecimentos sobre o universo de Stranger Things. Este jogo inclui partículas de poeira flutuantes e citações de todas as quatro temporadas.</p>
                 <p class="project-skills"><span>Skills: </span>
                   Javascript, JSX, Git, GitHub, HTML, CSS </p>
                 <a href="https://niko1402.github.io/guess-the-word/" target="_blank" class="project-link">Live Page</a>
@@ -93,8 +92,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Hotel Booking UI</h3>
-                <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
-                  available by different criteria, including amenities and offers.</p>
+                <p class="project-description">Um aplicativo de pesquisa de hotéis construído usando React. Os usuários podem filtrar os quartos de hotel disponíveis por diferentes critérios, incluindo comodidades/amenidades?? e ofertas.</p>
                 <p class="project-skills"><span>Skills: </span>
                   React, JSX, Stateful Components, CodeSandbox, React Dev Tools</p>
                 <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
@@ -107,8 +105,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Github Repo Gallery</h3>
-                <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
-                  for a specific repo, or click on one for more details and a link to the repository.</p>
+                <p class="project-description">Criado usando a API do GitHub para extrair dados do meu portfólio do GitHub. Pesquise um repositório específico ou clique em qualquer um para obter mais detalhes e um link para o repositório.</p>
                 <p class="project-skills"><span>Skills: </span>
                   JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
                 <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
@@ -122,12 +119,10 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Unplugged</h3>
-                <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
-                  desktop screens. A versatile design that can be repurposed for various scenarios.</p>
+                <p class="project-description">Um site responsivo de várias páginas que se adapta a telas de dispositivos móveis, tabletes e desktops. Um design versátil que pode ser reaproveitado para vários cenários.</p>
                 <p class="project-skills"><span>Skills: </span>
                   HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
-                <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
-                  Page</a>
+                <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
 
@@ -137,8 +132,7 @@
               </div>
               <div class="project-info">
                 <h3 class="project-title">Rogue Pickings</h3>
-                <p class="project-description">A simple landing page that would be great for a local café or a food
-                  stand. Converted from a static website into a responsive design using Flexbox.</p>
+                <p class="project-description">Uma página de destino simples que seria ótima para um café local ou uma barraca de comida. Convertido de um site imóvel em um design responsivo usando Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
                   HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
                 <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
@@ -214,18 +208,12 @@
             <img src="../img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
           </div>
           <div class="about-info">
-            <p class="about-intro">Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
-              Brazil.</p>
-            <p class="about-text">My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
-              spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
-              Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
-              Music Business.</p>
-            <p class="about-text">The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
-              and started studying a range of new marketable skills, including basic web development. That last one that
-              really got me excited, so I leaped into the Front End Developer course with Skillcrush.
-              I love challenges and problem-solving, so coding feels like a perfect fit.</p>
-            <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
-              crowd, or even want to build a new site from scratch, then I’d love to hear from you and see how I can help! Now, I'll just put the kettle on, and ...
+            <p class="about-intro">Oi! Sou <span>Nik</span>, um músico inglês e desenvolvedor web atuamente morando no Brasil.</p>
+            <p class="about-text">Minha mudança para o campo da tecnologia foi tudo menos uma linha reta. Depois de me formar em música, passei mais de 10 anos em turnê pela Europa, Ásia e EUA, antes de me tornar o Diretor Artístico de um grande festival de jazz no Brasil. Isso levou a uma mudança para os EUA para obter meu segundo diploma em Music Business.</p>
+            <p class="about-text">A pandemia de Covid basicamente encerrou a indústria da música, então deixei minha necessidade obsessiva de aprender assumir o controle e comecei a estudar uma série de novas habilidades comercializáveis, incluindo desenvolvimento web. Esse último realmente me empolgou, então entrei no curso de Desenvolvedor Front-End com Skillcrush.
+              Eu amo desafios e resolução de problemas, então a codificação parece uma encaixa perfeito.
+              </p>
+            <p class="about-text">Se você precisa atualizar seu site, deseja adicionar alguns toques extras para se destacar da multidão ou até mesmo deseja criar um novo site do zero, adoraria ouvir de você e ver como posso ajudá-lo! Agora, vou colocar a chaleira no fogo e...
             </p>
           </div>
         </div>
@@ -236,17 +224,17 @@
   <footer class="footer" id="contact">
     <div class="content-wrapper">
       <!-- <div class="footer-content"> -->
-      <h3>... Let's Talk!</h3>
+      <h3>... Vamos conversar!</h3>
       <div class="contact-wrapper">
         <div class="contact-info">
-          <h4 class="contact-title">Interested in working together? Send me an email with some info about your project, and I'll get back to you as soon as I can (normally within 24 hours).</h4>
+          <h4 class="contact-title">Interessado em trabalhar juntos? Envie-me um e-mail com algumas informações sobre seu projeto e entrarei em contato com você o mais rápido possível (normalmente em 24 horas).</h4>
           <address>
             <a href="mailto:nik@nikpayton.tech">nik [@] nikpayton.tech</a>
           </address>
         </div>
 
         <div class="contact-info social">
-          <h4 class="contact-title">Or, if you just want to chat, follow me on LinkedIn and tell me what you're up to.</h4>
+          <h4 class="contact-title">Ou, se você quiser apenas conversar, siga-me no LinkedIn e me diga o que você está fazendo.</h4>
           <div class="follow-section">
             <ul class="social-icons">
               <li>
