Added header and text links for language options. Created classes for landing page links, etc.

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -31,9 +31,22 @@
 
 <body>
 
+    <header>
+      <div class="landing-header">
+        <h2>nik payton | web developer</h2>
+      </div>
+    </header>
+
       <section class="landing-page">
         <div class="content-wrapper">
-          <h1>What can I <span>code</span> for you today?</h1>
+          <div class="choose-language">
+            <div class="english">
+            <h1><a href="../index.html">English</a></h1>
+            </div>
+            <div class="portuguese">
+            <h1><a href="../portuguese/index.html">Portuguese</a></h1>
+            </div>
+          </div>
         </div>
       </section>
 
