Created landing page css file. Updated css link in html

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -21,7 +21,7 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/landing.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
