Created english folder and moved main index file to there. Updated links in main index and landing page index

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,7 +41,7 @@
         <div class="content-wrapper">
           <div class="choose-language">
             <div class="english">
-            <h1><a href="../index.html">English</a></h1>
+            <h1><a href="../english/index.html">English</a></h1>
             </div>
             <div class="portuguese">
             <h1><a href="../portuguese/index.html">Portuguese</a></h1>
