Removed services link until the page is ready

--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -41,7 +41,7 @@
           <li><a href="#skills">skills</a></li>
           <li><a href="#about">sobre</a></li>
           <li><a href="#contact">contato</a></li>
-          <li><a href="/services/index.html">serviços</a></li>
+          <!-- <li><a href="/services/index.html">serviços</a></li> -->
         </ul>
       </nav>
     </div>
