Messed around with some services text ideas

--- a/services/index.html
+++ b/services/index.html
@@ -124,12 +124,11 @@
       <section class="services-info">
         <div class="content-wrapper">
           <p>Code a pixel-perfect website from an existing design, including interactivity</p>
-          <p>Convert existing website into a fully responsive, mobile-friendly site.</p>
-          <p>Add interactivity to a site.</p>
-          <p>Personalize a WordPress theme.</p>
-          <p>WordPress maintenance – backups, updates, tweaks etc.</p>
+          <p>Upgrade existing website into a fully responsive, mobile-friendly site.</p>
+          <p>WordPress theme personalisation - install relevant plugins and widgets.</p>
+          <p>WordPress maintenance – backups, plugin updates, tweaks etc.</p>
           <h4>Musicians, artists and small businesses</h4>
-          <p>Online business/presence analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
+          <p>Online business analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
           <p>Website optimisation - attract more fans/clients</p>
         </div>
       </section>
