Changed section titles to portuguese

--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -39,7 +39,7 @@
         <ul class="navigation">
           <li><a href="#projects">projetos</a></li>
           <li><a href="#skills">skills</a></li>
-          <li><a href="#about">sobre</a></li>
+          <li><a href="#about">sobre mim</a></li>
           <li><a href="#contact">contato</a></li>
           <!-- <li><a href="/services/index.html">serviços</a></li> -->
         </ul>
@@ -58,7 +58,7 @@
 
       <section class="portfolio" id="projects">
         <div class="content-wrapper">
-          <h2>Projects</h2>
+          <h2>Projetos</h2>
           <div class="portfolio-wrapper">
             <article class="portfolio-piece">
               <div class="project-image">
@@ -203,7 +203,7 @@
 
       <section class="about-area" id="about">
         <div class="content-wrapper">
-          <h2>About Me</h2>
+          <h2>Sobre mim</h2>
           <div class="about-photo">
             <img src="../img/new-profile-pic.JPG" alt="Photo of Nik Payton" />
           </div>
