Changed here text to portuguese

--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -52,7 +52,7 @@
 
       <section class="hero-area">
         <div class="contact-wrapper">
-          <h1>What can I <span>code</span> for you today?</h1>
+          <h1>O que posso <span>codificar</span> para você hoje?</h1>
         </div>
       </section>
 
