Removed landing-page code from main css file. Services index - deleted old code left over from main index.html

--- a/services/index.html
+++ b/services/index.html
@@ -20,8 +20,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
   <!-- Font Awesome Icons-->
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
@@ -48,91 +48,26 @@
   </header>
 
   <main>
-    <div class="content">
-
-      <!-- <section class="hero-area">
-        <div class="contact-wrapper">
-          <h1><span>services</span></h1>
-        </div>
-      </section> -->
-
-      <section class="services">
-        <div class="content-wrapper">
-          <h1><span>Services</span></h1>
-          <div class="portfolio-wrapper">
-            </div>
-
-      <!-- <hr class="header-divider"> -->
-
-      <!-- <section class="skills" id="skills">
-        <div class="content-wrapper">
-          <h2>Skills</h2>
-          <!-- <h4>Developer Skills</h4> -->
-          <!-- <ul class="skill-list">
-            <li class="skill-item">
-              <i class="fab fa-html5"></i>
-              <p class="skill-item-name">Html</p>
-            </li> -->
-            <!-- <li class="skill-item">
-              <i class="fab fa-css3"></i>
-              <p class="skill-item-name">Css</p>
-            </li>
-            <li class="skill-item">
-              <i class="fab fa-js-square"></i>
-              <p class="skill-item-name">JavaScript</p>
-            </li>
-            <li class="skill-item">
-              <i class="fab fa-react"></i>
-              <p class="skill-item-name">React</p>
-            </li>
-            <li class="skill-item">
-              <i class="design-icon"></i>
-              <p class="skill-item-name">Responsive Design</p>
-            </li> -->
-            <!-- <li class="skill-item">
-              <i class="fab fa-git-alt"></i>
-              <p class="skill-item-name">Git</p>
-            </li>
-            <li class="skill-item">
-              <i class="fab fa-github"></i>
-              <p class="skill-item-name">Github</p>
-            </li>
-            <li class="skill-item">
-              <i class="code-icon"></i>
-              <p class="skill-item-name">Rest Api</p>
-            </li>
-            <li class="skill-item">
-              <i class="ai-icon"></i>
-              <p class="skill-item-name">Illustrator</p>
-            </li> -->
-            <!-- <li class="skill-item">
-              <i class="ps-icon"></i>
-              <p class="skill-item-name">Photoshop</p>
-            </li>
-            <li class="skill-item">
-              <i class="coffee-icon"></i>
-              <p class="skill-item-name">Damn Good Coffee</p>
-            </li>
-            <li class="skill-item">
-              <i class="cooking-icon"></i>
-              <p class="skill-item-name">Nifty in the Kitchen</p>
-            </li>
-          </ul>
-        </div>
-      </section> --> 
-
-      <section class="services-info">
-        <div class="content-wrapper">
-          <p>Code a pixel-perfect website from an existing design, including interactivity</p>
-          <p>Upgrade existing website into a fully responsive, mobile-friendly site.</p>
-          <p>WordPress theme personalisation - install relevant plugins and widgets.</p>
-          <p>WordPress maintenance – backups, plugin updates, tweaks etc.</p>
-          <h4>Musicians, artists and small businesses</h4>
-          <p>Online business analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
-          <p>Website optimisation - attract more fans/clients</p>
+    <section class="service-page">
+      <h1><span>Services</span></h1>
+        <div class="services">
+          <div class="content-wrapper">
+            <article class="services-info">
+              <p><i class="design-icon"></i></p>
+              <p class="service-description">Code a pixel-perfect website from an existing design, including interactivity. Upgrade existing website into a fully responsive, mobile-friendly site.</p>
+            </article>
+            <article class="services-info">
+              <p>WordPress theme personalisation - install relevant plugins and widgets.</p>
+              <p>WordPress maintenance – backups, plugin updates, tweaks etc.</p>
+            </article>
+            <article class="services-info">
+              <h4>Musicians, artists and small businesses</h4>
+              <p>Online business analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
+              <p>Website optimisation - attract more fans/clients</p>
+            </article>
+          </div>
         </div>
       </section>
-    </div>
   </main>
 
   <footer class="footer" id="contact">
