Added icons to services, and hr rule to seperate paragraph text.

--- a/services/index.html
+++ b/services/index.html
@@ -37,11 +37,11 @@
       <div class="header-divider"></div>
       <nav id="navbar">
         <ul class="navigation">
-          <li><a href="../index.html#projects">projects</a></li>
-          <li><a href="../index.html#skills">skills</a></li>
-          <li><a href="../index.html#about">about</a></li>
+          <li><a href="../english/index.html#projects">projects</a></li>
+          <li><a href="../english/index.html#skills">skills</a></li>
+          <li><a href="../english/index.html#about">about</a></li>
           <li><a href="#contact">contact</a></li>
-          <li><a href="/services/index.html">services</a></li>
+          <li><a href="../services/index.html">services</a></li>
         </ul>
       </nav>
     </div>
@@ -53,17 +53,29 @@
         <div class="services">
           <div class="content-wrapper">
             <article class="services-info">
-              <p><i class="design-icon"></i></p>
-              <p class="service-description">Code a pixel-perfect website from an existing design, including interactivity. Upgrade existing website into a fully responsive, mobile-friendly site.</p>
+              <li class="services-list">
+              <i class="design-icon"></i>
+              </li>
+              <p>Code a pixel-perfect website from an existing design, including interactivity.</p> 
+              <hr>
+              <p>Upgrade an existing website into a fully responsive, mobile-friendly site.</p>
             </article>
             <article class="services-info">
-              <p>WordPress theme personalisation - install relevant plugins and widgets.</p>
+              <li class="services-list">
+              <i class="fa-brands fa-wordpress"></i>
+              </li>
+              <p>WordPress theme personalisation - adapt a WP template for your needs, install relevant plugins and widgets.</p>
+              <hr>
               <p>WordPress maintenance – backups, plugin updates, tweaks etc.</p>
             </article>
             <article class="services-info">
-              <h4>Musicians, artists and small businesses</h4>
+              <h3><span>Musicians, artists and small businesses</span></h3>
+              <li class="services-list">
+              <i class="fa-solid fa-icons"></i>
+              </li>
               <p>Online business analysis – effectiveness of website, social media etc., suggest areas to focus on</p>
-              <p>Website optimisation - attract more fans/clients</p>
+              <hr>
+              <p>Website optimisation - attract more fans/clients, build email lists etc.</p>
             </article>
           </div>
         </div>
