--- a/english/index.html
+++ b/english/index.html
@@ -41,7 +41,7 @@
           <li><a href="#skills">skills</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#contact">contact</a></li>
-          <!-- <li><a href="/services/index.html">services</a></li> -->
+          <li><a href="../services/index.html">services</a></li>
 
         </ul>
       </nav>
