Grammar changes on About section, eng and port

--- a/english/index.html
+++ b/english/index.html
@@ -219,7 +219,7 @@
               Brazil.</p>
             <p class="about-text">My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
               spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
-              Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
+              Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree, in
               Music Business.</p>
             <p class="about-text">The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
               and started studying a range of new marketable skills, including basic web development. That last one that
