--- a/portuguese/index.html
+++ b/portuguese/index.html
@@ -209,7 +209,7 @@
           </div>
           <div class="about-info">
             <p class="about-intro">Oi! Sou <span>Nik</span>, um músico inglês e desenvolvedor web atuamente morando no Brasil.</p>
-            <p class="about-text">Minha mudança para o campo da tecnologia foi tudo menos uma linha reta. Depois de me formar em música, passei mais de 10 anos em turnê pela Europa, Ásia e EUA, antes de me tornar o Diretor Artístico de um grande festival de jazz no Brasil. Isso levou a uma mudança para os EUA para obter meu segundo diploma em Music Business.</p>
+            <p class="about-text">Minha mudança para o campo da tecnologia foi tudo menos uma linha reta. Depois de me formar em música, passei mais de 10 anos em turnê pela Europa, Ásia e EUA, antes de me tornar o Diretor Artístico de um grande festival de jazz no Brasil. Isso levou a uma mudança para os EUA para obter meu segundo diploma, em Music Business.</p>
             <p class="about-text">A pandemia de Covid basicamente encerrou a indústria da música, então deixei minha necessidade obsessiva de aprender assumir o controle e comecei a estudar uma série de novas habilidades comercializáveis, incluindo desenvolvimento web. Esse último realmente me empolgou, então entrei no curso de Desenvolvedor Front-End com Skillcrush.
               Eu amo desafios e resolução de problemas, então a codificação parece uma encaixa perfeito.
               </p>
