Added more responses to questions. Changed question font-size to h4.

--- a/english/faq.html
+++ b/english/faq.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Nik Payton - Services</title>
+    <title>Nik Payton - FAQs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,17 +53,22 @@
             <div class="services">
                 <div class="content-wrapper">
                     <article class="faq">
-                        <h3><span>I've had the same website for years and it still works fine. Why should I change?</span></h3>
-                        <p>?!?!?!</p>
+                        <h4><span>I've had the same website for years and it still works fine. Why should I change?</span></h4>
+                        <p>As of 2022, over 60% of internet traffic comes from mobile devices and that number will only increase. If your website is not mobile-friendly (meaning it looks just as good on different mobile devices as it does on a laptop) then most users won't stick around for any longer than a few seconds. Also, Google's algorythms will punish non responsive sites, meaning you or your company will not rank highly on a Google search.</p>
                         <hr>
                     </article>
                     <article class="faq">
-                        <h3><span>I haven't been losing any clients/fans, so why should I worry about optimising my website?</span></h3>
-                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an artist or a small business, you should always be trying to attract new fans and clients, preferably without losing existing ones. If your website is old, badly designed or not mobile-friendly then keeping those potential customers for more than 30 seconds is going to be really hard. Optimising your website can help attract new clients, keep them engaged and eventually convert them into paying customers.</p>
+                        <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my website?</span></h4>
+                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an artist or a small business, you should always be trying to attract new fans and clients, preferably without losing existing ones. If your website is old, poorly designed, or not mobile-friendly then keeping those potential customers for more than 30 seconds is going to be hard. Optimising your website can help attract new clients, keep them engaged and eventually convert them into paying customers.</p>
                         <hr>
                     </article>
                     <article class="faq">
-                        <h3><span>What's the big deal with instant vs fresh coffee? It's all coffee, right?</span></h3>
+                        <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I bother with anything else?</span></h4>
+                        <p>A Facebook page is NOT a website. Instagram is great for publicising products and creating content that shares your know-how with the world. However, here's some data to think about. Around 70% of internet users in the US and the UK use social media</p>
+                        <hr>
+                    </article>
+                    <article class="faq">
+                        <h4><span>What's the big deal with instant vs fresh coffee? It's all coffee, right?</span></h4>
                         <p>Seriously?</p>
                         <hr>
                     </article>
