--- a/english/faq.html
+++ b/english/faq.html
@@ -53,25 +53,52 @@
             <div class="services">
                 <div class="content-wrapper">
                     <article class="faq">
-                        <h4><span>I've had the same website for years and it still works fine. Why should I change?</span></h4>
-                        <p>As of 2022, over 60% of internet traffic comes from mobile devices and that number will only increase. If your website is not mobile-friendly (meaning it looks just as good on different mobile devices as it does on a laptop) then most users won't stick around for any longer than a few seconds. Also, Google's algorythms will punish non responsive sites, meaning you or your company will not rank highly on a Google search.</p>
-                        <hr>
+                        <h4><span>What's a responsive website, and why should I have one?</span></h4>
+                        <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
+                            depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
+                            from mobile devices and that number will only increase. If your website is not
+                            mobile-friendly (meaning it looks just as good on different mobile devices as it does on a
+                            laptop) then most users won't stick around for any longer than a few seconds. Also, Google's
+                            algorithms will punish non responsive sites, meaning you or your company will not rank
+                            highly on a Google search.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my website?</span></h4>
-                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an artist or a small business, you should always be trying to attract new fans and clients, preferably without losing existing ones. If your website is old, poorly designed, or not mobile-friendly then keeping those potential customers for more than 30 seconds is going to be hard. Optimising your website can help attract new clients, keep them engaged and eventually convert them into paying customers.</p>
-                        <hr>
+                        <h4><span>I haven't been losing any clients/fans, so why should I worry about optimising my
+                                website?</span></h4>
+                        <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
+                            artist or a small business, you should obviously be always trying to attract new fans and
+                            clients, preferably without losing existing ones. If your website is old, poorly designed,
+                            or not responsive then keeping those potential customers for more than 30 seconds is going
+                            to be hard. Optimising your website can help attract new clients, keep them engaged and
+                            eventually convert them into paying customers.</p>
                     </article>
                     <article class="faq">
-                        <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I bother with anything else?</span></h4>
-                        <p>A Facebook page is NOT a website. Instagram is great for publicising products and creating content that shares your know-how with the world. However, here's some data to think about. Around 70% of internet users in the US and the UK use social media</p>
-                        <hr>
+                        <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
+                                bother with anything else?</span></h4>
+                        <p>A Facebook page is NOT a website. Instagram is great for publicising products and creating
+                            content that shares your know-how with the world. However, here's some data to think about.
+                            Only 55% of the world’s population is on social media. The US and the UK both have just over
+                            65% active social media users. Facebook has a user base of just under 3 billion, and there
+                            are close to 1.5 billion active Instagram users. Those are impressive numbers, and obviously
+                            the reach of social media is huge especially for small businesses, but let’s flip those
+                            numbers.
+                            Somewhere close to 30% of the US and UK populations don’t use social media. Almost 1 billion
+                            people don’t use Facebook and 42% of internet users don’t use Instagram. Therefore, if you
+                            only use these two platforms to reach fans and clients, you are missing out on a massive
+                            number of potential customers. So it’s really a no-brainer to have a website. It’s somewhere
+                            that clients and potential clients who don't use social media can always find information
+                            about your services, merchandise or gigs, irrespective of the latest social media trends.
+                        </p>
                     </article>
-                    <article class="faq">
-                        <h4><span>What's the big deal with instant vs fresh coffee? It's all coffee, right?</span></h4>
+                    <!-- <article class="faq">
+                        <h4><span>I don't have time to make fresh coffee in the morning, so I have instant. It's all coffee, right?</span></h4>
                         <p>Seriously?</p>
+                        <br>
+                        <br>
+                        <p>Seriously??</p>
+                        <p>How about you wake up 5 minutes earlier, you .....</p>
                         <hr>
-                    </article>
+                    </article> -->
                 </div>
             </div>
         </section>
