Changed some FAQ answer text

--- a/english/faq.html
+++ b/english/faq.html
@@ -57,7 +57,7 @@
                         <p>A responsive site is one that adapts to whatever device is being used. It changes appearence
                             depending on screen size and orientation. As of 2022, over 60% of internet traffic comes
                             from mobile devices and that number will only increase. If your website is not
-                            mobile-friendly (meaning it looks just as good on different mobile devices as it does on a
+                            mobile-friendly (in other words, it doesn't look just as good, and respond just as well, on different mobile devices as it does on a
                             laptop) then most users won't stick around for any longer than a few seconds. Also, Google's
                             algorithms will punish non responsive sites, meaning you or your company will not rank
                             highly on a Google search.</p>
@@ -68,15 +68,15 @@
                         <p>First of all, if not losing clients is your metric, it's a pretty shitty business plan. As an
                             artist or a small business, you should obviously be always trying to attract new fans and
                             clients, preferably without losing existing ones. If your website is old, poorly designed,
-                            or not responsive then keeping those potential customers for more than 30 seconds is going
+                            or non responsive (see above) then keeping those potential customers for more than 30 seconds is going
                             to be hard. Optimising your website can help attract new clients, keep them engaged and
                             eventually convert them into paying customers.</p>
                     </article>
                     <article class="faq">
                         <h4><span>My Facebook Page is my 'website', and I use Instagram for publicity. Why should I
                                 bother with anything else?</span></h4>
-                        <p>A Facebook page is NOT a website. Instagram is great for publicising products and creating
-                            content that shares your know-how with the world. However, here's some data to think about.
+                        <p>Well, a Facebook page is NOT a website. While Instagram is great for publicising products and creating
+                            content that shares your know-how with the world, here's some data to think about.
                             Only 55% of the world’s population is on social media. The US and the UK both have just over
                             65% active social media users. Facebook has a user base of just under 3 billion, and there
                             are close to 1.5 billion active Instagram users. Those are impressive numbers, and obviously
